# vector_database

./: Cargo.toml  README.md  README.rs  contribution.md  example.py  local_file.json
src/: algorithms.rs  kdtree.rs  lib.rs  main.rs  state_manager.rs  vector_db.rs
src/algorithms/: fast_search.rs  kdtree.rs  locality_sensitive_hashing.rs  lsh.rs  vector_db.rs
src/state_manager/: local_saver.rs  saver.rs
tests/: check_lsh.py  test
