[package]
name = "vector_database"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
numpy = "0.14.0"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[lib]
name = "vector_db"
crate-type = ["cdylib"]